# sc2sceneswitcher

./: Dockerfile  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: docker-build.yml  run-tests.yml  windows-build.yml
sc2sceneswitcher/: __main__.py  config.py  exceptions.py  predictions.py  sc2.py  sc2replaystats.py  setup_config.py  switcher.py
windows/: README.txt  configure.bat  run.bat
